# SearchEngine

./: .gitignore  AVLTest.cpp  AVLTree.cpp  AVLTree.h  Article.cpp  Article.h  Author.cpp  Author.h  CMakeLists.txt  Functions.h  HashSet.h  HashTable.cpp  HashTable.h  HashTest.cpp  InnerDoc.cpp  InnerDoc.h  PersistentIndexCreator.cpp  QueryProcessor.cpp  README.md  StopWordAssociation.cpp  StopWordAssociation.h  UserInterface.cpp  Word.cpp  Word.h  catch.hpp  fileParser.cpp  main.cpp  persistentFile.txt  searchMods.cpp
